adjust the connection of requestToJoin, repair the multiple submit while pressing send button on mobile

--- a/public/stylesheets/mobileStyle.css
+++ b/public/stylesheets/mobileStyle.css
@@ -18,7 +18,7 @@ form{
   margin: 0 auto;
 }
 
-form #code{
+#code{
   margin-bottom: 25px;
   width: 200px;
   height: 30px;
